2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Remove APPLE_CC and add -Wl,-allow_stack_execute on
	Apple.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* gentpl.py: Ignore error 2022 in objconv since it's irrelevant for us.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/sys/types.h [__APPLE__]: Include stddef
	rather than defining size_t ourselves to avoid conflict.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfs.c (grub_hfs_dir): Use memset instead of
	initialisation to avoid __bzero reference.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/startup_raw.S [__APPLE__]: Add Apple assembly
	version.
	* grub-core/commands/i386/pc/drivemap_int13h.S [__APPLE__]: Likewise.
	* grub-core/kern/i386/pc/startup.S [__APPLE__]: Likewise.
	* grub-core/lib/i386/relocator16.S [__APPLE__]: Likewise.
	* grub-core/lib/i386/relocator_common.S [__APPLE__]: Likewise.
	* grub-core/mmap/i386/pc/mmap_helper.S [__APPLE__]: Likewise.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/efiemu/runtime/efiemu.c: Replace APPLE_CC with __APPLE__.
	* grub-core/kern/misc.c: Likewise.
	* grub-core/loader/i386/xnu.c: Likewise.
	* include/grub/i386/tsc.h: Likewise.
	* include/grub/symbol.h: Likewise.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/list.h (grub_bad_type_cast_real): Remove return.
	* include/grub/misc.h (ATTRIBUTE_ERROR): Make into noreturn attribute
	on older compiler.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_util_biosdisk_get_grub_dev) [__APPLE__]:
	Implement Apple flavour.
	(convert_system_partition_to_system_disk) [__APPLE__]: Likewise.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h (memcmp) [__APPLE__]: Mark as regparm 0.
	(memmove) [__APPLE__]: Likewise.
	(memcpy) [__APPLE__]: Likewise.
	(memset) [__APPLE__]: Likewise.